# Algo-Trader

./: Cargo.toml  Dockerfile  docker-compose.yml  fetch_alpaca_data.py  generate_data.py
.github/workflows/: bench.yml  ci.yml  docker-test.yml
benches/: strategy_benchmarks.rs
data/: AAPL.csv  AMD.csv  AMZN.csv  GOOGL.csv  META.csv  MSFT.csv  NVDA.csv  historical_bars.csv  historical_pairs.csv
dev/bench/: data.js
src/: agent.rs  backtest.rs  data_loader.rs  environment.rs  execution.rs  lib.rs  main.rs  memory.rs  model.rs  strategy.rs
src/tools/: mod.rs
